--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -10,3 +10,4 @@
 <% if user_signed_in? %>
   <li><%= link_to 'Users', users_path %></li>
 <% end %>
+<li><%= link_to 'Used Technologies', tools_path %></li>
