--- a/app/views/static_pages/tools.html.slim
+++ b/app/views/static_pages/tools.html.slim
@@ -6,7 +6,7 @@ ul
       = @language
   li
     a href='http://rubyonrails.org/' target='blank'
-      'Ruby on Rails
+      'Ruby on Rails 4.2.0
   li
     a href='https://rubygems.org/gems/devise' target='blank'
       'Devise
