contact_page_modified

--- a/app/views/static_pages/contacts.html.slim
+++ b/app/views/static_pages/contacts.html.slim
@@ -1,4 +1,12 @@
 h1
  = "This is #{@name}'s page"
 
+h3
+ = "Our contacts:"
+h5
+ = "Phone: +23(345)12-34-678" 
+h5
+ ="Email:" 
+ <a href="support@example.com">support@example.com</a>
+
 
