--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -13,3 +13,4 @@
 <li><%= link_to 'Used Technologies', tools_path %></li>
 <li><%= link_to 'About Us', about_us_path %></li>
 <li><%= link_to 'FAQ', faq_path %></li>
+<li><%= link_to 'Contacts', contacts_path %></li>
