--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -11,3 +11,4 @@
   <li><%= link_to 'Users', users_path %></li>
 <% end %>
 <li><%= link_to 'Used Technologies', tools_path %></li>
+<li><%= link_to 'Contacts', contacts_path %></li>
