add link to about_us page

--- a/app/views/static_pages/about_us.html.slim
+++ b/app/views/static_pages/about_us.html.slim
@@ -4,8 +4,8 @@ h1
 p
   = "We are independent software developers from Ukraine."
 
-div
-  = "Our Team:"
+h2
+  = @developers
 
 ul
   li
@@ -27,4 +27,5 @@ ul
     a href='https://github.com/wep89/' target='blank'
       'Mikhaylo Ardashyn - Ruby on Rails Developer
 
-
+p
+  = "The project \"Filemanager 4.0\" is very useful innovative collaborative rich application that we recommends to use"
