--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -12,3 +12,4 @@
 <% end %>
 <li><%= link_to 'Used Technologies', tools_path %></li>
 <li><%= link_to 'About Us', about_us_path %></li>
+<li><%= link_to 'FAQ', faq_path %></li>
