dutka_contact_page_fin

--- a/app/views/static_pages/contacts.html.slim
+++ b/app/views/static_pages/contacts.html.slim
@@ -1,12 +1,13 @@
 h1
- = "This is #{@name}'s page"
+ | This is #{@name}'s page
 
 h3
- = "Our contacts:"
+ | Our contacts:
 h5
- = "Phone: +23(345)12-34-678" 
+ | Phone: +23(345)12-34-678
 h5
- ="Email:" 
- <a href="support@example.com">support@example.com</a>
+ | Email:
+ a href="support@example.com"
+   |support@example.com
 
 
