--- a/app/assets/stylesheets/folders.css.scss
+++ b/app/assets/stylesheets/folders.css.scss
@@ -2,6 +2,6 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.nested_messages {
+.nested_folders {
   margin-left: 30px;
 }
