--- a/app/views/folders/_form.html.erb
+++ b/app/views/folders/_form.html.erb
@@ -1,9 +1,10 @@
 <%= form_for @folder do |f| %>
 
   <%= f.hidden_field :parent_id %>
+  <%= f.hidden_field :user_id %>
   <p>
     <%= f.label :name, "New Folder" %><br />
     <%= f.text_field :name %>
   </p>
-  <p><%= f.submit "Post Folder" %></p>
+  <p><%= f.submit "Create Folder" %></p>
 <% end %>
