--- a/app/views/layouts/_navigation.html.slim
+++ b/app/views/layouts/_navigation.html.slim
@@ -1,4 +1,4 @@
-<%# navigation styled for Bootstrap 3.0 %>
+-# navigation styled for Bootstrap 3.0
 nav.navbar.navbar-inverse.navbar-fixed-top
   .container
     .navbar-header
