correct link to github for Marat

--- a/app/views/static_pages/about_us.html.slim
+++ b/app/views/static_pages/about_us.html.slim
@@ -9,7 +9,7 @@ h2
 
 ul
   li
-    a href='https://github.com/' target='blank'
+    a href='https://github.com/maratk' target='blank'
       'Marat Kamenshchykov - Team Lead
   li
     a href='https://github.com/pyotrkoryakin/' target='blank'
