add visual components to folders view

--- a/app/views/folders/index.html.slim
+++ b/app/views/folders/index.html.slim
@@ -1,5 +1,9 @@
 h1 Folders
 
+span.glyphicon.glyphicon-plus
+.glyphicon.glyphicon-folder-close
+  <script type="text/javascript">document.getElementsByClassName('glyphicon glyphicon-plus')[0].onclick = function() {alert('test')};
+  </script>
 = nested_folders @folders.arrange(:order => :created_at)
 
 = render "form"
