add links to folders

--- a/app/views/folders/_folder.html.slim
+++ b/app/views/folders/_folder.html.slim
@@ -1,7 +1,10 @@
 .folder
-  .glyphicon.glyphicon-folder-close.name
+
   - if folder.has_children?
+    .glyphicon.glyphicon-plus
+  .glyphicon.glyphicon-folder-close
   = folder.name
+
   /.created_at
     = folder.created_at.strftime("%B %d, %Y")
 
