--- a/app/assets/stylesheets/folders.css.scss
+++ b/app/assets/stylesheets/folders.css.scss
@@ -2,3 +2,9 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.glyphicon-minus ~ ul {
+  display: block;
+}
+.glyphicon-plus ~ ul {
+  display: none;
+};
