--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -25,19 +25,27 @@ body{
   margin-left: 30px;
 }
 
-    ul {
-      list-style-type: none;
-      .glyphicon {
-        cursor: pointer;
+.list-group {
+  ul {
+    list-style-type: none;
+    .glyphicon {
+      cursor: pointer;
+    }
+    a {
+      color: black;
+      text-decoration: none;
+      span:hover {
+        text-decoration: underline;
       }
-      a {
-        color: black;
-        text-decoration: none;
-        span:hover {
-          text-decoration: underline;
-        }
-      };
     };
-    li > ul {
-      list-style-type: none;
-    };
+  };
+  li > ul {
+    list-style-type: none;
+  };
+  .glyphicon-minus ~ ul {
+    display: block;
+  }
+  .glyphicon-plus ~ ul {
+    display: none;
+  };
+};
