--- a/app/views/folders/_folder.html.slim
+++ b/app/views/folders/_folder.html.slim
@@ -1,9 +1,32 @@
 .folder
-  .created_at 
-    = folder.created_at.strftime("%B %d, %Y")
+  /.created_at 
+  /  = folder.created_at.strftime("%B %d, %Y")
+  ul
+
   .name
+  li
     = folder.name
-  .actions
-    = link_to "Create subfolder", new_folder_path(parent_id: folder) 
-    = "|"
-    = link_to "Destroy", folder, method: :delete, data: {confirm: "Are you sure?"}
+  li
+
+  /.actions
+   / = link_to "Create subfolder", new_folder_path(parent_id: folder) 
+    /= "|"
+    /= link_to "Destroy", folder, method: :delete, data: {confirm: "Are you sure?"}
+
+thead
+
+tbody
+tr
+td
+td
+td
+td
+td
+td
+- if @folder
+tr
+td.up colspan="5"
+= link_to @folder.parent || root_path
+
+span
+| ..
