--- a/app/views/layouts/_navigation_links.html.erb
+++ b/app/views/layouts/_navigation_links.html.erb
@@ -9,7 +9,7 @@
 <% end %>
 <% if user_signed_in? %>
   <li><%= link_to 'Users', users_path %></li>
-  <li><%= link_to 'Folders', folders_path %></li>
+  <li><%= link_to 'Folders', folders_tree_folders_path %></li>
 <% end %>
 <li><%= link_to 'Used Technologies', tools_path %></li>
 <li><%= link_to 'About Us', about_us_path %></li>
