--- a/app/views/folders/index.html.slim
+++ b/app/views/folders/index.html.slim
@@ -1,7 +1,19 @@
 h1 Folders
 
-ol.breadcrumb
-  = render_breadcrumbs :tag => :li, :separator => " "
+ol.nav-path
+  span
+    | You are here: /
+    = link_to "Folders", folders_path
+    - if @folder && @folder.ancestors
+      |  /
+      - @folder.ancestors.each do |folder|
+        = link_to folder.name, folder
+        |  /
+    = @folder.name if @folder
+
+
+  /!
+    = render_breadcrumbs :tag => :li, :separator => " "
 
 = nested_folders @folders.arrange(:order => :created_at)
 
